updated portfolio website html and css

--- a/Portfolio website/style.css
+++ b/Portfolio website/style.css
@@ -1,5 +1,114 @@
 *{
     padding:0px;
     margin:0px;
-    box-sizing: ;
+    box-sizing: border-box;
+}
+
+.hero{
+    height:100vh;
+    width:100%;
+    background-image: url(./images/image4.jpg);
+    background-size: cover;
+    background-position: center;
+    color: white;
+}
+
+.logo{
+    color:#ffffff;
+    font-size: 42px;
+    letter-spacing: 1px;
+    cursor:default;
+}
+
+span{
+    color:#f9004d;
+}
+
+ul li{
+    display: inline-block;
+    padding:10px 20px;
+}
+
+ul li a{
+    color:white;
+    text-decoration:none;
+}
+
+ul li a:hover{
+    color:#f9004d;
+}
+
+.nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top:45px;
+    padding-left:8%;
+    padding-right:8%;
+}
+
+.btn{
+    background-color:#f9004d;
+    color:white;
+    text-decoration:none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 10px 25px;
+    border-radius:30px;
+    transition: transform .3s;
+}
+
+.btn:hover{
+    transform: scale(1.2);
+}
+
+.content{
+    position:absolute;
+    top:50%;
+    left: 8%;
+    right: 8%;
+}
+
+h1{
+    color:white;
+    margin: 20px 0 20px 0;
+    font-size:70px;
+}
+
+h3{
+    color:white;
+    font-size: 25px;
+    margin-bottom:50px;
+}
+
+h4{
+    color:white;
+    font-size: 20px;
+    letter-spacing: 2px;
+}
+
+.newsletter form{
+    width:400px;
+    max-width: 100%;
+    position:relative;
+}
+
+.newsletter form input:first-child{
+    width:100%;
+    display: inline-block;
+    padding: 14px 130px 14px 15px;
+    border: 2px solid #f9004d;
+    border-radius:20px;
+}
+
+.newsletter form input:last-child{
+    position:absolute;
+    display: inline-block;
+    border:none;
+    border-radius:20px;
+    padding: 10px 30px;
+    background-color:#f9004d;
+    color:white;
+    top: 6px;
+    right: 6px;
 }
