few more touches

--- a/Portfolio website/style.css
+++ b/Portfolio website/style.css
@@ -75,6 +75,11 @@ h1{
     font-size:70px;
 }
 
+h2{
+    margin-top: 20px;
+    background-color: red;
+}
+
 h3{
     color:white;
     font-size: 25px;
